--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-django==2.2.3
+django~=2.2.0
 social-auth-backend-epita==0.0.4
-social-auth-app-django==3.1
-django-crispy-forms==1.7
-reportlab==3.5
-pdf2image==1.5
+social-auth-app-django~=3.1.0
+django-crispy-forms~=1.7.0
+reportlab~=3.5.0
+pdf2image~=1.8
 mysqlclient
 django-bootstrap-datepicker-plus
 google-api-python-client
